--- a/tests/integration/security/testdata/rbac/v1beta1-jwt.yaml.tmpl
+++ b/tests/integration/security/testdata/rbac/v1beta1-jwt.yaml.tmpl
@@ -1,5 +1,7 @@
 # Enforce access control based on JWT subject.
 
+# The following policy enables JWT authentication on service b.
+
 apiVersion: "authentication.istio.io/v1alpha1"
 kind: Policy
 metadata:
@@ -18,6 +20,11 @@ spec:
   originIsOptional: true
   principalBinding: USE_ORIGIN
 ---
+
+# The following policy enables authorization on workload b:
+# - Allow request principal test-issuer-1@istio.io/sub-1 to access path /token1
+# - Allow request in group-2 to access path /token2
+
 apiVersion: "security.istio.io/v1beta1"
 kind: AuthorizationPolicy
 metadata:
