jwt: refactor e2e tests to not to wait for 1 minutes blindly for each test case

--- a/tests/integration/security/testdata/jwt/simple-jwt-policy.yaml.tmpl
+++ b/tests/integration/security/testdata/jwt/simple-jwt-policy.yaml.tmpl
@@ -1,7 +1,7 @@
 apiVersion: "authentication.istio.io/v1alpha1"
 kind: "Policy"
 metadata:
-  name: "simple-jwt-policy-for-b"
+  name: "jwt-simple-for-b"
   namespace: {{ .Namespace }}
 spec:
   targets:
