--- a/tests/integration/security/testdata/jwt/jwt-with-paths.yaml.tmpl
+++ b/tests/integration/security/testdata/jwt/jwt-with-paths.yaml.tmpl
@@ -1,12 +1,12 @@
-# Service b will allow access to path /health_check or paths with prefix /guest without jwt authentication.
+# Service c will allow access to path /health_check or paths with prefix /guest without jwt authentication.
 apiVersion: "authentication.istio.io/v1alpha1"
 kind: "Policy"
 metadata:
-  name: "jwt-with-excluded-paths-for-b"
+  name: "jwt-excluded-paths-for-c"
   namespace: {{ .Namespace }}
 spec:
   targets:
-  - name: b
+  - name: c
   origins:
   - jwt:
       issuer: "test-issuer-1@istio.io"
@@ -18,15 +18,15 @@ spec:
   principalBinding: USE_ORIGIN
 ---
 
-# Service c will only require jwt authentication on paths with suffix "confidential"
+# Service d will only require jwt authentication on paths with suffix "confidential"
 apiVersion: "authentication.istio.io/v1alpha1"
 kind: "Policy"
 metadata:
-  name: "jwt-with-included-paths-for-c"
+  name: "jwt-included-paths-for-d"
   namespace: {{ .Namespace }}
 spec:
   targets:
-  - name: c
+  - name: d
   origins:
   - jwt:
       issuer: "test-issuer-1@istio.io"
