--- a/tests/integration/security/testdata/rbac/v1beta1-jwt.yaml.tmpl
+++ b/tests/integration/security/testdata/rbac/v1beta1-jwt.yaml.tmpl
@@ -24,6 +24,7 @@ spec:
 # The following policy enables authorization on workload b:
 # - Allow request principal test-issuer-1@istio.io/sub-1 to access path /token1
 # - Allow request in group-2 to access path /token2
+# - Allow request with any token to access path /tokenAny
 
 apiVersion: "security.istio.io/v1beta1"
 kind: AuthorizationPolicy
@@ -49,4 +50,11 @@ spec:
     when:
     - key: request.auth.claims[groups]
       values: ["group-2"]
+  - to:
+    - operation:
+        paths: ["/tokenAny"]
+        methods: ["GET"]
+    from:
+    - source:
+        requestPrincipals: ["*"]
 ---
