Revert optional_jwt_test and add test cases to the existing TestV1beta1_JWT

--- a/tests/integration/security/testdata/rbac/v1beta1-jwt.yaml.tmpl
+++ b/tests/integration/security/testdata/rbac/v1beta1-jwt.yaml.tmpl
@@ -5,11 +5,9 @@
 apiVersion: "authentication.istio.io/v1alpha1"
 kind: Policy
 metadata:
-  name: jwt-policy
+  name: default
   namespace: {{ .Namespace }}
 spec:
-  targets:
-  - name: b
   origins:
   - jwt:
       issuer: "test-issuer-1@istio.io"
