--- a/tests/integration/telemetry/stackdriver/vm/testdata/client_request_count.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/vm/testdata/client_request_count.json.tmpl
@@ -16,7 +16,7 @@
           "request_operation": "GET",
           "request_protocol": "http",
           "response_code": "200",
-          "service_authentication_policy": "",
+          "service_authentication_policy": "unknown",
           "source_canonical_revision": "v1",
           "source_canonical_service_name": "client",
           "source_canonical_service_namespace": "{{ .EchoNamespace }}",
