--- a/tests/integration/telemetry/stackdriver/vm/testdata/server_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/vm/testdata/server_access_log.json.tmpl
@@ -22,6 +22,7 @@
         "source_principal": "spiffe://cluster.local/ns/{{ .EchoNamespace }}/sa/default",
         "source_version": "v1",
         "source_workload": "client-v1",
-        "protocol": "http"
+        "protocol": "http",
+        "log_sampled": "false"
     }
 }
