--- a/tests/integration/telemetry/stackdriver/testdata/server_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/testdata/server_access_log.json.tmpl
@@ -24,6 +24,7 @@
         "source_principal": "spiffe://cluster.local/ns/{{ .EchoNamespace }}/sa/default",
         "source_version": "v1",
         "source_workload": "clt-v1",
-        "protocol": "grpc"
+        "protocol": "grpc",
+        "log_sampled": "false"
     }
 }
