--- a/tests/integration/security/testdata/authz/v1beta1-tcp.yaml.tmpl
+++ b/tests/integration/security/testdata/authz/v1beta1-tcp.yaml.tmpl
@@ -17,7 +17,7 @@ spec:
         ports: ["8090"]
 ---
 
-# The following policy denies request to port 8090 for workload c
+# The following policy denies request to port 8090 for workload c, requests from principal of suffix "b" or namespace of suffix Namespace2
 
 apiVersion: "security.istio.io/v1beta1"
 kind: AuthorizationPolicy
@@ -33,6 +33,11 @@ spec:
   - to:
     - operation:
         ports: ["8090"]
+  - from:
+    - source:
+        principals: ["*b"]
+    - source:
+        namespaces: ["*{{ .Namespace2 }}"]
 ---
 
 # The following policy denies request from service account a and namespace 2 for workload d
