--- a/tests/integration/security/testdata/authz/v1beta1-tcp.yaml.tmpl
+++ b/tests/integration/security/testdata/authz/v1beta1-tcp.yaml.tmpl
@@ -17,7 +17,10 @@ spec:
         ports: ["8090"]
 ---
 
-# The following policy denies request to port 8090 for workload c, requests from principal of suffix "b" or namespace of suffix Namespace2
+# The following policy denies:
+# request to port 8090 for workload c
+# request to port 8093 with principal suffix matching
+# request to port 8092 with namespace suffix matching
 
 apiVersion: "security.istio.io/v1beta1"
 kind: AuthorizationPolicy
@@ -33,9 +36,16 @@ spec:
   - to:
     - operation:
         ports: ["8090"]
-  - from:
+  - to:
+    - operation:
+        ports: ["8093"]
+    from:
     - source:
-        principals: ["*b"]
+        principals: ["*/ns/{{ .Namespace }}/sa/b"]
+  - to:
+    - operation:
+        ports: ["8092"]
+    from:
     - source:
         namespaces: ["*{{ .Namespace2 }}"]
 ---
