--- a/tests/integration/security/testdata/requestauthn/f-authn.yaml.tmpl
+++ b/tests/integration/security/testdata/requestauthn/f-authn.yaml.tmpl
@@ -10,5 +10,5 @@ spec:
       app: f
   jwtRules:
   - issuer: "test-issuer-1@istio.io"
-    jwks: '{ "keys":[ {"e":"AQAB","kid":"abc","kty":"RSA","n":"failedToFetchJwtPubKeyhttpsrawgithubusercontentcomistioistiorelease16securitytoolsjwtsamplesjwksjson"}]}'
+    jwksUri: "https://site.doesnot.exist/istio/istio/release-1.6/security/tools/jwt/samples/jwks.json"
 ---
