--- a/tests/integration/security/testdata/requestauthn/f-authn.yaml.tmpl
+++ b/tests/integration/security/testdata/requestauthn/f-authn.yaml.tmpl
@@ -10,5 +10,5 @@ spec:
       app: f
   jwtRules:
   - issuer: "test-issuer-1@istio.io"
-    jwksUri: "https://site.doesnot.exist/istio/istio/release-1.6/security/tools/jwt/samples/jwks.json"
+    jwksUri: "https://raw.githubusercontent.com/istio/istio/master/tests/common/jwt/jwksfake.json"
 ---
