--- a/tests/integration/telemetry/stackdriver/testdata/tcp_server_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/testdata/tcp_server_access_log.json.tmpl
@@ -1,4 +1,5 @@
 {
+    "text_payload": "clt --> srv",
     "labels": {
         "destination_app": "srv",
         "destination_canonical_revision": "v1",
@@ -20,11 +21,6 @@
         "source_version": "v1",
         "source_workload": "clt-v1",
         "protocol": "tcp",
-        "log_sampled": "false",
-        "requested_server_name": "outbound_.9090_._.srv.{{ .EchoNamespace }}.svc.cluster.local",
-        "upstream_cluster": "inbound|9090|tcp|srv.{{ .EchoNamespace }}.svc.cluster.local",
-        "route_name": "",
-        "x-envoy-original-dst-host": "",
-        "x-envoy-original-path": ""
+        "log_sampled": "false"
     }
 }
