Update Proxy SHA
Signed-off-by: gargnupur <gargnupur@google.com>

--- a/tests/integration/telemetry/stackdriver/testdata/tcp_server_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/testdata/tcp_server_access_log.json.tmpl
@@ -1,4 +1,5 @@
 {
+    "text_payload": "clt --> srv",
     "labels": {
         "destination_app": "srv",
         "destination_canonical_revision": "v1",
