Fix integration test
Signed-off-by: davidraskin <draskin@google.com>

--- a/tests/integration/security/testdata/authz/v1beta1-log.yaml.tmpl
+++ b/tests/integration/security/testdata/authz/v1beta1-log.yaml.tmpl
@@ -7,7 +7,7 @@ spec:
   selector:
     matchLabels:
       "app": "b"
-  action: LOG
+  action: AUDIT
   rules:
   - to:
     - operation:
@@ -24,7 +24,7 @@ spec:
   selector:
     matchLabels:
       "app": "c"
-  action: LOG
+  action: AUDIT
   rules:
   - to:
     - operation:
