--- a/tests/integration/telemetry/stackdriver/testdata/authz_policy/srv_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/testdata/authz_policy/srv_access_log.json.tmpl
@@ -23,6 +23,7 @@
         "source_namespace": "{{ .Namespace }}",
         "source_principal": "spiffe://cluster.local/ns/{{ .Namespace }}/sa/{{ .SourceName }}",
         "source_version": "v1",
-        "source_workload": "{{ .SourceName }}-v1"
+        "source_workload": "{{ .SourceName }}-v1",
+        "protocol": "{{ .Protocol }}"
     }
 }
