--- a/tests/integration/telemetry/stackdriver/testdata/server_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/testdata/server_access_log.json.tmpl
@@ -25,7 +25,7 @@
         "source_version": "v1",
         "source_workload": "clt-v1",
         "protocol": "grpc",
-        "log_sampled": "false",
+        "log_sampled": "true",
         "upstream_cluster": "inbound|7070|grpc|srv.{{ .EchoNamespace }}.svc.cluster.local",
         "route_name": "default",
         "requested_server_name": "outbound_.7070_._.srv.{{ .EchoNamespace }}.svc.cluster.local",
