update proxy sha

--- a/tests/integration/telemetry/stackdriver/testdata/server_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/testdata/server_access_log.json.tmpl
@@ -14,7 +14,7 @@
         "destination_service_host": "srv.{{ .EchoNamespace }}.svc.cluster.local",
         "destination_version": "v1",
         "destination_workload": "srv-v1",
-        "mesh_uid": "test-mesh",
+        "mesh_uid": "proj-test-mesh",
         "response_flag": "-",
         "service_authentication_policy": "MUTUAL_TLS",
         "source_app": "clt",
