--- a/tests/integration/telemetry/stackdriver/vm/testdata/server_access_log.json.tmpl
+++ b/tests/integration/telemetry/stackdriver/vm/testdata/server_access_log.json.tmpl
@@ -12,7 +12,7 @@
         "destination_principal": "spiffe://cluster.local/ns/{{ .EchoNamespace }}/sa/default",
         "destination_service_host": "server.{{ .EchoNamespace }}.svc.cluster.local",
         "destination_workload": "vm-server-v1",
-        "mesh_uid": "test-mesh",
+        "mesh_uid": "proj-test-mesh",
         "response_flag": "-",
         "service_authentication_policy": "MUTUAL_TLS",
         "source_app": "client",
